# DragonFruit

./: .env.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  LOCALE.md  README.md  crowdin.yml  eslint.config.mjs  lingui.config.ts  mkdocs.yml  next.config.ts  package-lock.json  package.json  personal-buglist.md  tsconfig.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: planned-feature-user-story.md
.github/instructions/: agent-feedback-loop.instructions.md  pr-writing.instructions.md
.github/workflows/: build-nightly.yml  dev-prerelease.yml  main-release.yml  plugin-registry-guardrails.yml  pr-check-build.yml  pr-linux-build.yml  tauri-bundle.yml  tauri-preview.yml  tauri-release.yml
.tauri/: app.key.pub
.windsurf/workflows/: backup.md  dev-plan.md  features-issues.md  new-branch-workflow.md  pull-request-workflow.md  read-this-first.md  support-anatomy.md
1. Documentation/: 0. Bugs  1. IslandDetectionMethod.md  ARCHITECTURE_AND_HANDOFF.md  Auto-support traction force constrained support structures optimization for bottom-up vat photopolymerization.pdf.txt  FeatureList.md  annas-arch-c612c9012371.pdf.txt
1. Documentation/LogicBible/: 1 LogicBibleWritingDirections.md  4 CompactUIStyleGuide.md  Auto-Lift.md  BVH-RaycastOptimization.md  CompactUIStyleGuide.md  IslandScan-ScanlineMethod.md  MASTER_LysConversion_Bible.md  NewSupportTypeGuide.md  PhysicsBasedAutoSupports.md  Support Settings Anatomy Preview.md
2. Backup/: 00. Changelog.md
3. LysConversion/: 1support.lys  Rotation-scale-multi support test.lys  Run LYS Full Extract.bat  dragonfruit_supports.json  lys_full_extract.py  multisupport with custom support shape.lys  multisupport.lys  normalize_lychee.py
3. LysConversion/1support_full_extract/: __index_full_extract.json  __supports_summary.json  manifest.json  scene.decrypted.json
3. LysConversion/LycheeConversion Test/: Test.stl
3. LysConversion/Rotation-scale-multi support test_full_extract/: __index_full_extract.json  __supports_summary.json  manifest.json  scene.decrypted.json
3. LysConversion/backup/: scene.decrypted.json
3. LysConversion/multisupport with custom support shape_full_extract/: __index_full_extract.json  __supports_summary.json  manifest.json  scene.decrypted.json
3. LysConversion/multisupport_full_extract/: __index_full_extract.json  __supports_summary.json  manifest.json  scene.decrypted.json
Scratch/: MeshRepairandHollowing.md  Modular_Raft_Builder_Development_Plan.md
dev-supports/: implementation_plan.md
docs/: BACKUPS.md  LOCAL_STORAGE_SCHEMA.md  SHADER_GUIDELINES.md  SUPPORT_CODING_GUIDELINES.md  control-api.md  gpu-3daa-stage-b-design.md  index.md  torture-test-meshes.md
docs/dev/: gpu-slice-backend.md  (+1 more)
flatpak/: org.openresinalliance.dragonfruit.desktop  org.openresinalliance.dragonfruit.metainfo.xml  org.openresinalliance.dragonfruit.yml
plugins/: CONTRIBUTING_COMPLEX_PLUGINS.md  README.md
public/: Dragonfruit Logo.af  Dragonfruit Logo.af~lock~
rust/dragonfruit-cli/: Cargo.toml
rust/dragonfruit-cli/docs/: CLI.md  CLI_E2E_PIPELINE.md  CLI_GAPS_PLAN.md  CLI_NEW_FORMAT_PLAN.md  CLI_WONT_DO.md
rust/dragonfruit-cli/src/: io.rs  lib.rs  main.rs
rust/dragonfruit-islands/: Cargo.toml
rust/dragonfruit-islands/docs/: ISLANDS.md
rust/dragonfruit-islands/src/: distance2d.rs  geometry.rs  lib.rs  model.rs  pipeline.rs  rasterize.rs  rle.rs  scan.rs  sections.rs  tracker.rs
rust/dragonfruit-islands/tests/: worst_case.rs
rust/dragonfruit-slicing-engine/: Cargo.toml  README.md
rust/dragonfruit-slicing-engine/docs/: API.md  ARCHITECTURE.md  BENCHMARKING.md  DEVELOPMENT_GUIDE.md  ENCODERS.md  INTEGRATION_TAURI.md  PIPELINE.md  README.md  ROADMAP_V3_2.md  TROUBLESHOOTING.md
rust/dragonfruit-slicing-engine/src/: backend.rs  benchmark.rs  binary_mask.rs  blur.rs  cross_blend.rs  dither.rs  encode.rs  engine.rs  geometry.rs  index.rs  lib.rs  metrics.rs  pipeline.rs  raster.rs  rle.rs  rle_3daa.rs  types.rs  z_blend.rs  zaa.rs
rust/dragonfruit-slicing-engine/src/encoders/: mod.rs  registry.rs
rust/dragonfruit-slicing-engine/src/gpu/: README.md  downsample.wgsl  mod.rs  rle.wgsl  slice.wgsl  zblur.wgsl
rust/dragonfruit-voxl-thumbnail/: Cargo.toml  README.md
rust/dragonfruit-voxl-thumbnail/macos-qlext/: README.md  build.sh
rust/dragonfruit-voxl-thumbnail/macos-qlext/Sources/VoxlThumbnailExtension/: Info.plist  ThumbnailProvider.swift  VoxlThumbnailExtension.entitlements
rust/dragonfruit-voxl-thumbnail/platform/linux/: deb-postinst.sh  deb-postrm.sh  dragonfruit-voxl.thumbnailer  dragonfruit-voxl.xml  install.sh  uninstall.sh
rust/dragonfruit-voxl-thumbnail/platform/macos/: install.sh  uninstall.sh
rust/dragonfruit-voxl-thumbnail/platform/windows/: diagnose.ps1  register.ps1  unregister.ps1
rust/dragonfruit-voxl-thumbnail/src/: lib.rs  main.rs
rust/dragonfruit-voxl-thumbnail/windows-com/: Cargo.toml
rust/dragonfruit-voxl-thumbnail/windows-com/src/: lib.rs
scripts/: build-thumbnail-providers.mjs  bundle-cef-libs.sh  check-complex-plugin-allowlist.mjs  df-input.sh  df-snap.sh  dragonfruit-ts-cli.ts  gen_nsis_images.py  generate-builtin-simple-plugins.mjs  generate-plugin-registry.mjs  island-bench.ts  island-compare-rs-ts.ts  island-debug-export.ts  island-ipc-debug.ts  island-stl-bench.ts  macos-embed-appex.mjs  macos-thumbnails.mjs  support-drag-perf.ts  tauri-build.mjs  tauri-bundle-all.mjs  tauri-bundle-macos-universal.mjs  verify-generated-plugin-registry.mjs  verify-universal-bundle.mjs
src/: i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  logging.json
src-tauri/nsis/: thumbnail-hooks.nsh
src-tauri/nsis/assets/: license.txt
src-tauri/src/: app_startup.rs  control_server.rs  island_scan.rs  local_backup.rs  logging.rs  main.rs  mesh_export.rs  mesh_minima.rs  mesh_repair.rs  plugin_registry.rs  print_io.rs  scene_autosave.rs  scene_files.rs  sdf.rs  slicing_staging.rs  temp_artifacts.rs  updater_channel.rs  window_commands.rs
(+920 files in other folders)
