[package]
name = "dragonfruit-desktop"
version = "0.1.8"
edition = "2021"

[build-dependencies]
# All tauri crates come from the feat/cef branch which adds the CEF runtime
# backend. macOS/Windows use wry (default); Linux builds pass --features
# tauri-cef. Pinned to explicit revs (not `branch`) for reproducibility — see
# the [patch.crates-io] note below and ADR 0005 for the bump procedure.
tauri-build = { git = "https://github.com/tauri-apps/tauri", rev = "562bc592b337de417aa48e72034c7816cfb4c142", features = [] }

[dependencies]
# default-features = false — runtime backend chosen via tauri-wry / tauri-cef features.
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "562bc592b337de417aa48e72034c7816cfb4c142", default-features = false, features = ["compression", "dynamic-acl"] }
# Optional: pulled in by tauri-wry feature. On CEF builds these are excluded
# to avoid E0252 collision (they pull tauri with default wry feature).
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", optional = true }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rfd = "0.15"
rayon = "1.10"
zip = "2"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
if-addrs = "0.10"
tungstenite = "0.24"
base64 = "0.22"
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "fs", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
dragonfruit-slicing-engine = { path = "../rust/dragonfruit-slicing-engine" }
dragonfruit-rtsp-relay = { path = "../rust/dragonfruit-rtsp-relay" }
dragonfruit-islands = { path = "../rust/dragonfruit-islands" }
dragonfruit-mesh-repair = { path = "../rust/dragonfruit-mesh-repair", features = ["manifold"] }
dragonfruit-sdf = { path = "../rust/dragonfruit-sdf" }
dragonfruit-astar = { path = "../rust/dragonfruit-astar" }
flate2 = "1.1.9"
bytemuck = "1"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-fps = "0.1.0"

[features]
default = ["custom-protocol", "tauri-wry"]
custom-protocol = ["tauri/custom-protocol"]
# Runtime backend features — mutually exclusive.
# Default: tauri-wry (WebKitGTK/WebView2/WebKit)
# Linux CEF: --no-default-features --features custom-protocol,tauri-cef
tauri-wry = ["tauri/wry", "dep:tauri-plugin-log", "dep:tauri-plugin-single-instance"]
tauri-cef = ["tauri/cef"]

# Compile the experimental wgpu GPU slice backend into the desktop app so a
# single build can run either variant, chosen at launch via DF_SLICE_BACKEND=gpu.
# Forwards to the engine's `gpu` feature (wgpu + pollster + bytemuck).
gpu = ["dragonfruit-slicing-engine/gpu"]

# Redirect all transitive tauri crate deps to the feat/cef branch so Cargo
# resolves a single tauri version tree. Safe for macOS/Windows since wry
# remains the default feature on feat/cef.
#
# Pinned to explicit revs rather than `branch = "feat/cef"` so the build is
# reproducible and cannot silently drift when the upstream branch moves.
# NOTE: the crates are NOT all on the same commit — Cargo.lock currently
# resolves `tauri-plugin` (a build-time codegen crate) to an older commit than
# the rest, so each entry is pinned to the exact rev it was already locked at.
# This preserves the validated resolution; do not "unify" them to one rev
# without a full cross-arch rebuild + smoke (see ADR 0005, "Bumping the pinned
# tauri rev").
# To revert to stable: delete this block and switch deps back to crates.io.
[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "562bc592b337de417aa48e72034c7816cfb4c142" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", rev = "562bc592b337de417aa48e72034c7816cfb4c142" }
tauri-runtime = { git = "https://github.com/tauri-apps/tauri", rev = "562bc592b337de417aa48e72034c7816cfb4c142" }
tauri-runtime-wry = { git = "https://github.com/tauri-apps/tauri", rev = "562bc592b337de417aa48e72034c7816cfb4c142" }
tauri-macros = { git = "https://github.com/tauri-apps/tauri", rev = "562bc592b337de417aa48e72034c7816cfb4c142" }
tauri-utils = { git = "https://github.com/tauri-apps/tauri", rev = "562bc592b337de417aa48e72034c7816cfb4c142" }
tauri-codegen = { git = "https://github.com/tauri-apps/tauri", rev = "562bc592b337de417aa48e72034c7816cfb4c142" }
tauri-plugin = { git = "https://github.com/tauri-apps/tauri", rev = "a94e1b8595d9bb49328451dfe151d8499c712d44" }

# Maximum release optimisation: fat LTO collapses all codegen units into one
# link step, enabling inlining and dead-code elimination across crate boundaries.
# Critical for the slicing engine — cross-crate SIMD and rayon dispatch paths
# are 15-30% faster with fat LTO than the default thin/no-LTO build.
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "none"  # keep debug info for crash reports; strip handled by Tauri bundler

# Compile ALL dependencies with full optimizations in dev builds.
# The slicer and its deps (flate2, crc32fast, png, zip, rayon) are
# 50-200x slower in debug mode due to heavy numerical/compression work.
# Only the Tauri shell (dragonfruit-desktop) stays unoptimized for fast recompiles.
[profile.dev.package."*"]
opt-level = 3

# The wildcard above only covers registry deps; path deps need explicit entries.
[profile.dev.package.dragonfruit-slicing-engine]
opt-level = 3

# The desktop shell crate contains IPC/glue hot paths (mesh staging/decoding).
# Keep it optimized in dev so bridge overhead measurements are representative.
[profile.dev.package.dragonfruit-desktop]
opt-level = 3
