[package]
name = "dragonfruit-voxl-thumbnail-com"
version = "0.1.0"
edition = "2021"
description = "Windows IThumbnailProvider COM DLL for VOXL files"

[lib]
name = "dragonfruit_voxl_thumbnail_com"
crate-type = ["cdylib"]

[dependencies]
dragonfruit-voxl-thumbnail = { path = ".." }
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
]

[dependencies.windows-core]
version = "0.58"
